samples/_failures_safe/1761500260_b019b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85eb9b08.c: In function ‘tokenize’:
./samples/SAFE/__tmp_85eb9b08.c:164:44: error: expected ‘;’ at end of input
  164 |         tokens[token_count].column = column
      |                                            ^
      |                                            ;
./samples/SAFE/__tmp_85eb9b08.c:164:9: error: expected declaration or statement at end of input
  164 |         tokens[token_count].column = column
      |         ^~~~~~
./samples/SAFE/__tmp_85eb9b08.c:164:9: error: expected declaration or statement at end of input
